--- a/blockchain/package.json
+++ b/blockchain/package.json
@@ -42,5 +42,6 @@
   "dependencies": {
     "@openzeppelin/contracts": "^5.0.1",
     "@openzeppelin/contracts-upgradeable": "^5.0.1"
-  }
+  },
+  "type": "module"
 }
