--- a/package.json
+++ b/package.json
@@ -9,18 +9,24 @@
     "test": "jest",
     "lint": "eslint ."
   },
-  "keywords": ["tree", "life", "system", "integration"],
+  "keywords": [
+    "tree",
+    "life",
+    "system",
+    "integration"
+  ],
   "author": "Garrett Carrol",
   "license": "MIT",
   "dependencies": {
-    "express": "^4.18.2",
+    "axios": "^1.13.2",
     "cors": "^2.8.5",
-    "dotenv": "^16.3.1"
+    "dotenv": "^16.3.1",
+    "express": "^4.18.2"
   },
   "devDependencies": {
-    "nodemon": "^3.0.2",
+    "eslint": "^8.55.0",
     "jest": "^29.7.0",
-    "eslint": "^8.55.0"
+    "nodemon": "^3.0.2"
   },
   "engines": {
     "node": ">=18.0.0"
