--- a/nervous-system/ai-agents/data-quality-agent/requirements.txt
+++ b/nervous-system/ai-agents/data-quality-agent/requirements.txt
@@ -1,7 +1,7 @@
-redis==5.0.1
-requests==2.31.0
-transformers==4.35.2
-torch==2.1.1
-scikit-learn==1.3.2
-numpy==1.24.3
-sentence-transformers==2.2.2
+redis>=5.0.1
+requests>=2.31.0
+transformers>=4.49.0
+torch>=2.6.0
+scikit-learn>=1.3.2
+numpy>=1.26.3
+sentence-transformers>=3.0.0
